# ants-terminal

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLUGINS.md  README.md  ROADMAP.md  RULES.md  SECURITY.md  STANDARDS.md  ants-terminal.desktop  ants-terminal.desktop.in  audit_config.yaml  audit_rules.json  launch.sh  main.py  requirements.txt
.claude/: bump.json  settings.json
.claude/agents/: ants-status-bar.md
.github/workflows/: ci.yml  release.yml
app/: __init__.py  chat_display.py  config.py  icon.py  input_widget.py  main_window.py  themes.py
docs/: AUDIT_REPORT_2026-04-11.md  AUDIT_TRIAGE_2026-04-16.md  RECOMMENDED_ROUTINES.md  ROADMAP_FORMAT.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-cold-eyes-companion-cleanup.md  README.md
docs/journal/: 2026-04-13-AUDIT-snapshot.md  2026-04-13-DISCOVERY.md  2026-04-13-FIXPLAN.md  2026-04-13-project_audit_updates.md  ANTS-1120-measurement.md  ANTS-1145.md
docs/plans/: ANTS-1146.md  ANTS-1147.md
docs/roadmap/: 0.5.md  0.6.md
docs/screenshots/: README.md
docs/specs/: ANTS-1014.md  ANTS-1106.md  ANTS-1116.md  ANTS-1117.md  ANTS-1118.md  ANTS-1119.md  ANTS-1120.md  ANTS-1124.md  ANTS-1145.md  ANTS-1146.md  ANTS-1147.md  ANTS-1148.md  ANTS-1150.md  ANTS-1158.md  ANTS-1159.md
docs/standards/: README.md  coding.md  commits.md  documentation.md  roadmap-format.md  testing.md
packaging/: README.md  check-version-drift.sh  hook-on-cmakelists-edit.sh  rotate-roadmap.sh
packaging/archlinux/: PKGBUILD
packaging/completions/: _ants-terminal  ants-terminal.bash  ants-terminal.fish
packaging/debian/: changelog  control  copyright  postinst  postrm  rules
packaging/flatpak/: FLATHUB.md  README.md  make-flathub-manifest.sh  org.ants.Terminal.yml
packaging/linux/: ants-terminal.1  org.ants.Terminal.desktop  org.ants.Terminal.metainfo.xml
packaging/opensuse/: ants-terminal.spec
packaging/shell-integration/: README.md  ants-osc133.bash  ants-osc133.zsh
scripts/: measure-companion-tokens.sh
src/: aidialog.cpp  aidialog.h  antshelper.cpp  antshelper.h  antshelpermain.cpp  auditdialog.cpp  auditdialog.h  auditengine.cpp  auditengine.h  audithygiene.cpp  audithygiene.h  auditrulequality.cpp  auditrulequality.h  branchchip.h  claudeallowlist.cpp  claudeallowlist.h  claudebgtasks.cpp  claudebgtasks.h  claudebgtasksdialog.cpp  claudebgtasksdialog.h  claudeintegration.cpp  claudeintegration.h  claudeprojects.cpp  claudeprojects.h  claudestatuswidgets.cpp  claudestatuswidgets.h  claudetabtracker.cpp  claudetabtracker.h  claudetasklist.cpp  claudetasklist.h  claudetasklistdialog.cpp  claudetasklistdialog.h  claudetranscript.cpp  claudetranscript.h  clipboardguard.cpp  clipboardguard.h  coloredtabbar.cpp  coloredtabbar.h  commandpalette.cpp  commandpalette.h  (+62 more)
tests/: audit_self_test.sh
tests/audit_fixtures/bash_c_non_literal/: bad.cpp  good.cpp
tests/audit_fixtures/cmake_no_version_floor/: bad.txt  good.txt
tests/audit_fixtures/cmd_injection/: bad.cpp  good.cpp
tests/audit_fixtures/conflict_markers/: bad.cpp  good.cpp
tests/audit_fixtures/format_string/: bad.c  good.c
tests/audit_fixtures/hardcoded_ips/: bad.c  good.c
tests/audit_fixtures/insecure_http/: bad.cpp  good.cpp
tests/audit_fixtures/memory_patterns/: bad.cpp  good.cpp
tests/audit_fixtures/qimage_load_without_peek/: bad.cpp  good.cpp
tests/audit_fixtures/qnetworkreply_no_abort/: bad.cpp  good.cpp
tests/audit_fixtures/qt_openurl_unchecked/: bad.cpp  good.cpp
tests/audit_fixtures/secrets_scan/: bad.cpp  good.cpp
tests/audit_fixtures/setPermissions_pair_no_helper/: bad.cpp  good.cpp
tests/audit_fixtures/silent_catch/: bad.cpp  good.cpp
tests/audit_fixtures/ssh_argv_dash_host/: bad.cpp  good.cpp
tests/audit_fixtures/todo_scan/: bad.c  good.c
tests/audit_fixtures/unbounded_callback_payloads/: bad.cpp  good.cpp
tests/audit_fixtures/unsafe_c_funcs/: bad.cpp  good.cpp
tests/audit_fixtures/weak_crypto/: bad.c  good.c
tests/features/: README.md
tests/features/a11y_chrome_names/: spec.md  test_a11y_chrome_names.cpp
tests/features/ai_context_redaction/: spec.md  test_ai_context_redaction.cpp
tests/features/ai_insert_command_sanitize/: spec.md  test_ai_insert_command.cpp
tests/features/allowlist_add/: spec.md  test_allowlist_add.cpp
tests/features/allowlist_perms_postcommit/: spec.md  test_allowlist_perms_postcommit.cpp
tests/features/audit_command_rule_trust/: spec.md  test_audit_command_rule_trust.cpp
tests/features/audit_dedup_96bit/: spec.md  test_audit_dedup_96bit.cpp
tests/features/audit_engine_extraction/: spec.md  test_audit_engine_extraction.cpp
tests/features/audit_hygiene/: spec.md  test_audit_hygiene.cpp
tests/features/audit_incremental_output_drain/: spec.md  test_audit_incremental_output_drain.cpp
tests/features/audit_path_traversal/: spec.md  test_audit_path_traversal.cpp
tests/features/audit_per_tool_timeout/: spec.md  test_audit_per_tool_timeout.cpp
tests/features/audit_regex_dos_watchdog/: spec.md  test_audit_regex_dos_watchdog.cpp
tests/features/audit_rule_quality/: spec.md  test_audit_rule_quality.cpp
tests/features/audit_sarif_suppressions/: spec.md  test_audit_sarif_suppressions.cpp
tests/features/audit_tool_crash_distinct/: spec.md  test_audit_tool_crash_distinct.cpp
tests/features/bce_scroll_erase/: spec.md  test_bce_scroll_erase.cpp
tests/features/claude_bg_tasks_button/: spec.md  test_claude_bg_tasks_button.cpp
tests/features/claude_git_context_hook/: spec.md  test_installer_grep.cpp  test_script.sh
tests/features/claude_plan_mode_detection/: spec.md  test_claude_plan_mode.cpp
tests/features/claude_state_dot_palette/: spec.md  test_claude_state_dot_palette.cpp
tests/features/claude_status_bar/: spec.md  test_claude_status.cpp
tests/features/claude_statusbar_extraction/: spec.md  test_claude_statusbar_extraction.cpp
tests/features/claude_tab_status_indicator/: spec.md  test_claude_tab_tracker.cpp
tests/features/claude_task_list/: spec.md  (+1 more)
tests/perf/: bench_vt_throughput.cpp
(+213 files in other folders)
